<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="mx.edu.utng.mloza.apppuzzle1341.MainActivity">

    <Spinner
        android:id="@+id/spn_tipos"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/tipos"
        android:textColor="#a38181"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton android:background="@drawable/g1" android:id="@+id/button1" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g2" android:id="@+id/button2" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g3" android:id="@+id/button3" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g4" android:id="@+id/button4" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton android:background="@drawable/g5" android:id="@+id/button5" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g6" android:id="@+id/button6" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g7" android:id="@+id/button7" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g8" android:id="@+id/button8" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton android:background="@drawable/g9" android:id="@+id/button9" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g10" android:id="@+id/button10" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g11" android:id="@+id/button11" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g12" android:id="@+id/button12" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton android:background="@drawable/g13" android:id="@+id/button13" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g14" android:id="@+id/button14" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g15" android:id="@+id/button15" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
            <ImageButton android:background="@drawable/g16" android:id="@+id/button16" android:layout_width="@dimen/ancho" android:layout_height="@dimen/alto" android:layout_weight="1"></ImageButton>
        </LinearLayout>
    </LinearLayout>
    <Spinner
        android:id="@+id/spn_opciones"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:entries="@array/opciones"></Spinner>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_mezclar"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_mezclar"/>
        <Button
            android:id="@+id/btn_salir"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_salir"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_mostrar_creditos"
            android:id="@+id/btn_mostrar"/>
    </LinearLayout>

</LinearLayout>
